# sdltrs

./: .gitignore  .gitlab-ci.yml  0_build.sh  1_start.sh  BUILDING.md  CHANGELOG.md  CMakeLists.txt  Makefile.am  PKGBUILD  README.md  build_and_start.sh  configure.ac  default.nix  meson.build  meson_options.txt  sdl2trs.desktop  template
debian/: changelog  control  install  menu  rules
html/: Features.html  Options.html  ReleaseHistory.html  TextGUI.html
src/: BSDMakefile  BSDmakefile  Makefile  PasteManager.c  crc.c  debug.c  dis.c  gen_web_debugger_resources.py  load_cmd.c  main.c  mongoose.c  mongoose.h  reed.h  sdl2trs.1  sdltrs.1  trs.h  trs_cassette.c  trs_chars.c  trs_disk.c  trs_disk.h  trs_hard.c  trs_imp_exp.c  trs_imp_exp.h  trs_interrupt.c  trs_io.c  trs_memory.c  trs_mkdisk.c  trs_rom1.c  trs_rom3.c  trs_sdl_gui.c  trs_sdl_gui.h  trs_sdl_interface.c  trs_sdl_keyboard.c  trs_sdl_keyboard.h  trs_state_save.c  trs_state_save.h  trs_stringy.c  trs_uart.c  trs_xray_resources.h  web_debugger.c  (+7 more)
trs_xray/: .gitignore  README.md  gen_web_debugger_resources.py  package-lock.json  package.json  tsconfig.json  webpack.config.js
trs_xray/src/: data_structures.ts  disassembler.ts  memory-regions.csv  memory_regions.js  memory_regions.ts  memory_view.ts  register_panel.ts  screen.ts  trs_xray.css  trs_xray.html  trs_xray.ts  utils.ts  web_debugger.css  web_debugger.html  web_debugger.ts
